--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 bot.name=test-dchinyaev
 bot.token=6042607186:AAHV6k_A_pMZV5i31SPlaAO4rJidnCIU-y4
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=dmitrychinyaev993@gmail.com
+spring.mail.recipient=dmitrychinyaev93@yandex.ru
+spring.mail.password=meevzfofqvdftpkb
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
