--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,19 @@
 		<configuration-processor.version>2.7.11</configuration-processor.version>
 		<telegrambots-starter.version>6.5.0</telegrambots-starter.version>
 		<lombok.version>1.18.30</lombok.version>
+		<opencsv.version>5.8</opencsv.version>
+		<joda-time.version>2.10</joda-time.version>
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>${opencsv.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.10</version>
+			<version>${joda-time.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
